improved notebooks import problem

--- a/example_forecasting.ipynb
+++ b/example_forecasting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trying Task-Agnostic Amortized Inference ofGaussian Process Hyperparameters"
+    "# Trying Task-Agnostic Amortized Inference of Gaussian Process Hyperparameters for time series forecasting"
    ]
   },
   {
@@ -25,16 +25,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: easydict in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (1.9)\n",
-      "Requirement already satisfied: PyYAML in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (5.3.1)\n",
-      "Requirement already satisfied: tensorboardX in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (2.1)\n",
-      "Requirement already satisfied: amor-hyp-gp in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (0.1.1)\n",
-      "Requirement already satisfied: six in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from tensorboardX) (1.14.0)\n",
-      "Requirement already satisfied: protobuf>=3.8.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from tensorboardX) (3.11.4)\n",
-      "Requirement already satisfied: numpy in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from tensorboardX) (1.18.1)\n",
-      "Requirement already satisfied: setuptools in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from protobuf>=3.8.0->tensorboardX) (45.2.0.post20200210)\n",
-      "\u001b[33mWARNING: You are using pip version 20.0.2; however, version 20.3.1 is available.\n",
-      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/pytorch_p36/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: easydict in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (1.9)\n",
+      "Requirement already satisfied: PyYAML in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (5.3.1)\n",
+      "Requirement already satisfied: tensorboardX in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (2.1)\n",
+      "Requirement already satisfied: amor-hyp-gp in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (0.1.1)\n",
+      "Requirement already satisfied: protobuf>=3.8.0 in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (from tensorboardX) (3.14.0)\n",
+      "Requirement already satisfied: six in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (from tensorboardX) (1.15.0)\n",
+      "Requirement already satisfied: numpy in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (from tensorboardX) (1.19.4)\n"
      ]
     }
    ],
@@ -45,50 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found existing installation: amor-hyp-gp 0.1.1\r\n",
-      "Uninstalling amor-hyp-gp-0.1.1:\r\n",
-      "  Would remove:\r\n",
-      "    /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/ahgp/*\r\n",
-      "    /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/amor_hyp_gp-0.1.1.dist-info/*\r\n",
-      "    /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/model/*\r\n",
-      "Proceed (y/n)? "
-     ]
-    }
-   ],
-   "source": [
-    "! pip uninstall amor-hyp-gp "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting torch==1.6.0\n",
-      "  Downloading torch-1.6.0-cp36-cp36m-manylinux1_x86_64.whl (748.8 MB)\n",
-      "\u001b[K     |████████████████████████████████| 748.8 MB 2.6 kB/s  eta 0:00:01  |▏                               | 5.2 MB 9.5 MB/s eta 0:01:19    |█████████████████████████████▊  | 696.5 MB 322 kB/s eta 0:02:43\n",
-      "\u001b[?25hRequirement already satisfied: future in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from torch==1.6.0) (0.18.2)\n",
-      "Requirement already satisfied: numpy in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from torch==1.6.0) (1.18.1)\n",
-      "\u001b[31mERROR: fastai 1.0.61 requires nvidia-ml-py3, which is not installed.\u001b[0m\n",
-      "Installing collected packages: torch\n",
-      "  Attempting uninstall: torch\n",
-      "    Found existing installation: torch 1.4.0\n",
-      "    Uninstalling torch-1.4.0:\n",
-      "      Successfully uninstalled torch-1.4.0\n",
-      "Successfully installed torch-1.6.0\n",
-      "\u001b[33mWARNING: You are using pip version 20.0.2; however, version 20.3.1 is available.\n",
-      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/pytorch_p36/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: torch==1.6.0 in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (1.6.0)\r\n",
+      "Requirement already satisfied: numpy in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (from torch==1.6.0) (1.19.4)\r\n",
+      "Requirement already satisfied: future in /home/francois/workplace/venv/AHGP/lib/python3.6/site-packages (from torch==1.6.0) (0.18.2)\r\n"
      ]
     }
    ],
@@ -128,7 +91,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "module_path = os.path.abspath(os.path.join('/home/ec2-user/SageMaker/AHGP/src'))\n",
+    "module_path = os.path.abspath(os.path.join('../AHGP/src'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)"
    ]
@@ -147,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting an intuition for the spectral misture Kernel"
+    "# Getting an intuition for the spectral mixture Kernel"
    ]
   },
   {
@@ -377,11 +340,9 @@
    ],
    "source": [
     "# Plot a couple of draws:\n",
-    "\n",
     "number_draws = 4\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, sharex=True, figsize=(25, 12))\n",
-    "\n",
     "\n",
     "for i in range(number_draws // 2):\n",
     "    f, f_2 = draw_from_spectral_density(weights, var, mu, 1000, D)\n",
@@ -401,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1: time series\n",
+    "# Task 1: time series forecasting\n",
     "\n",
     "We start with a time series task for easier visualisation."
    ]
@@ -516,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trial 1: pretrained network with no mu"
+    "### Trial 1: pretrained network with no mu, i.e. mu set to 0"
    ]
   },
   {
@@ -1002,10 +963,13 @@
    "metadata": {},
    "source": [
     "# Next step:\n",
-    "- use this as a warm start rather than the final parameters: so train a GP with ML initialising at the found parameters\n",
+    "\n",
+    "It seems like the method was not originally designed for this purpose.\n",
+    "If we want to use it for this purpose, we will want to:\n",
+    "\n",
+    "- use this as a warm start rather than the final parameters: so train a GP with ML, initialising at the found parameters\n",
     "- train the model better (this is just running it out of the box with no tunning, just playing around with the data generation and using the mu)\n",
-    "- look into the way the mus are predicted and if something could be improved\n",
-    "- can we approximate the Gaussians in the spectral domain with Materns and so use this in state space GPs?"
+    "- look into the way the mus are predicted and if something could be improved\n"
    ]
   },
   {
@@ -1039,9 +1003,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "AHGP",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "ahgp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1053,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
